fix width overflow

--- a/src/components/NavBar/MainNav/styles.css
+++ b/src/components/NavBar/MainNav/styles.css
@@ -6,7 +6,7 @@
   padding: 8px 0px;
 
   position: fixed;
-  width: 100vw;
+  width: 100%;
   height: 66px;
   background: #d4f1f4;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
